--- a/src/main/resources/assets/awesome/lang/en_us.json
+++ b/src/main/resources/assets/awesome/lang/en_us.json
@@ -16,6 +16,9 @@
   "item.awesome.ruby_leggings": "Ruby Legging",
   "item.awesome.ruby_boots": "Ruby Boots",
 
+  "item.awesome.tomato": "Tomato",
+  "item.awesome.tomato_seeds": "Tomato Seeds",
+
   "block.awesome.ruby_block": "Block of Ruby",
   "block.awesome.ruby_ore": "Ruby Ore",
   "block.awesome.deepslate_ruby_ore": "Deepslate Ruby Ore",
